--- a/style.css
+++ b/style.css
@@ -9,12 +9,13 @@ h1 {
   color: orange;
 }
 section {
-  display: flex;text-align: justify;
+  display: flex;
+  text-align: justify;
+  margin-bottom: 120px;
 }
 .half-width {
   width: 50%;
   padding-left: 3%;
-  
 }
 .half-width img {
   width: 100%;
@@ -30,7 +31,12 @@ button:hover {
   background-color: rgb(189, 26, 121);
   color: yellow;
 }
-.top-banner{
-    background-image: url(images/top-banner.png);
+.top-banner {
+  background-image: url(images/top-banner.png);
+  background-repeat: no-repeat;
+}
+.dream-big {
+    background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
+    background-position:right;
 }
