--- a/style.css
+++ b/style.css
@@ -5,10 +5,13 @@ body {
 h1 {
   font-size: 50px;
 }
+h2 {
+  font-size: 2em;
+}
 .name {
   color: orange;
 }
-section {
+.flexible-container {
   display: flex;
   text-align: justify;
   margin-bottom: 120px;
@@ -16,6 +19,7 @@ section {
 .half-width {
   width: 50%;
   padding-left: 3%;
+  text-align: justify;
 }
 .half-width img {
   width: 100%;
@@ -36,7 +40,35 @@ button:hover {
   background-repeat: no-repeat;
 }
 .dream-big {
-    background-image: url(images/dream-bg.png);
-    background-repeat: no-repeat;
-    background-position:right;
+  background-image: url(images/dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  
+}
+.experience-area {
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+  margin-top: 14px;
+}
+.experience-item {
+  box-shadow: 10px 10px 40px grey;
+  width: 40%;
+  margin: 0 5%;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 12px;
+}
+#web-developer-item1 {
+    border-left: 7px solid;
+    border-image: linear-gradient(orange, tomato);
+    border-image-slice: 1;
+}
+#web-developer-item2 {
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+footer{
+    text-align: center;
 }
