--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ button:hover {
   background-position: left;
   margin-top: 14px;
 }
+.likha-gulo-position-a-ana{
+  width: 80%;
+  margin: 0;
+  padding-bottom: 10px;
+}
 .experience-item {
   box-shadow: 10px 10px 40px grey;
   width: 40%;
